# rootmatrix

./: .gitignore  LICENSE  README.md  pyproject.toml  rootmatrix.md
rootmatrix/: __init__.py  cli.py  server.py
rootmatrix/engine/: __init__.py  budget.py  config.py  filter.py  project_map.py  search.py  tokenizer.py  vector_store.py
tests/: test_config.py  test_filter.py  test_vector_store.py
tests/fixtures/: sample.js  sample.py  sample.tsx  sample_api.py
